[STREAMPIPES-395] Harmonize colors in UI components

--- a/ui/src/app/core-ui/dialog/panel-dialog/panel-dialog.component.scss
+++ b/ui/src/app/core-ui/dialog/panel-dialog/panel-dialog.component.scss
@@ -37,7 +37,7 @@ app-dialog-container {
   height: 50px;
   min-height: 50px;
   width: 100%;
-  background: $sp-color-primary;
+  background: var(--color-primary);
   align-items: center;
 }
 
