--- a/ui/src/app/dashboard/dashboard.component.html
+++ b/ui/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
                     </mat-tab-group>
                 </div>
                 <div fxFlex fxLayoutAlign="end center" class="mr-20">
-                <button mat-button mat-icon-button color="primary"
+                <button mat-button mat-icon-button color="accent"
                         *ngIf="selectedIndex > 0" (click)="toggleEditMode()" [disabled]="editMode">
                     <i class="material-icons">edit</i>
                 </button>
