--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -19,10 +19,10 @@
 
 <div fxFlex="100" fxLayout="column" class="m-20">
     <div fxLayout="row wrap">
-        <button mat-button mat-raised-button color="primary" (click)="openNewDataViewDialog()">
+        <button mat-button mat-raised-button color="accent" (click)="openNewDataViewDialog()">
             New Data View
         </button>
-        <button mat-button mat-raised-button color="primary" (click)="openEditLabelView()">
+        <button mat-button mat-raised-button color="accent" (click)="openEditLabelView()">
             Edit Labels
         </button>
     </div>
@@ -30,7 +30,7 @@
         <div fxFlex="100" class="assemblyOptions sp-blue-bg p-5">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>My Data Views</h4>
-                <span flex></span>
+                <span fxFlex></span>
             </div>
         </div>
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border">
