--- a/ui/src/app/notifications/notifications.component.scss
+++ b/ui/src/app/notifications/notifications.component.scss
@@ -115,7 +115,7 @@
 }
 
 .new-notification-info {
-    background: $sp-color-primary;
+    background: var(--color-primary);
     width: 10px;
     height: 10px;
     border-radius: 50%;
