--- a/ui/src/app/pipeline-details/components/edit/quickedit.component.html
+++ b/ui/src/app/pipeline-details/components/edit/quickedit.component.html
@@ -21,7 +21,7 @@
         <div fxLayout="row" fxLayoutAlign="start center">
             <h4>Edit configuration</h4>
             <span fxFlex></span>
-            <button color="primary" mat-button mat-raised-button matTooltip="Save Pipeline" matTooltipPosition="above"
+            <button color="accent" mat-button mat-raised-button matTooltip="Save Pipeline" matTooltipPosition="above"
                     style="display:flex;align-items:center;" class="settings-bar-icon-button"
                     [disabled]="(!formValid || pipelineUpdating)"
                     (click)="updatePipeline()">
