--- a/ui/src/app/pipeline-details/components/monitoring/pipeline-monitoring.component.html
+++ b/ui/src/app/pipeline-details/components/monitoring/pipeline-monitoring.component.html
@@ -21,7 +21,7 @@
     <div fxLayout="column" class="fixed-height add-options">
         <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row" style="padding-right:10px;">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                <mat-slide-toggle [(ngModel)]="autoRefresh" color="primary">Auto refresh</mat-slide-toggle>
+                <mat-slide-toggle [(ngModel)]="autoRefresh" color="accent">Auto refresh</mat-slide-toggle>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
 
         <div fxFlex="100" *ngIf="!pipeline.running" fxLayout="column" fxLayoutAlign="center center">
             <div class="error-message">(monitoring info is only available for running pipelines)</div>
-            <button mat-button mat-raised-button color="primary"
+            <button mat-button mat-raised-button color="accent"
                     matTooltip="Start Pipeline" matTooltipPosition="above"
                     (click)="startPipeline()">
                 <mat-icon>play_arrow</mat-icon>
