--- a/ui/src/app/pipelines/dialog/pipeline-categories/pipeline-categories-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/pipeline-categories/pipeline-categories-dialog.component.html
@@ -115,13 +115,13 @@
         </div>
         <div *ngIf="addSelected">
             <div class="md-list-item-text" fxFlex="20" fxLayout="column">
-                <mat-form-field>
+                <mat-form-field color="accent">
                     <mat-label>Name</mat-label>
                     <input matInput type="text" [(ngModel)]="newCategoryName">
                 </mat-form-field>
             </div>
             <div class="md-list-item-text" fxFlex="60" fxLayout="column">
-                <mat-form-field>
+                <mat-form-field color="accent">
                     <mat-label>Description</mat-label>
                     <input matInput type="text" [(ngModel)]="newCategoryDescription">
                 </mat-form-field>
