--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -34,7 +34,7 @@
                  fxLayoutAlign="center center">
                 <i class="material-icons disconnect-icon">block</i>
                 <h5 class="text-center">Widget not found, did you modify the pipeline?</h5>
-                <button mat-button mat-raised-button color="primary" (click)="modifyWidget()">
+                <button mat-button mat-raised-button color="accent" (click)="modifyWidget()">
                     <span>Modify widget</span>
                 </button>
             </div>
@@ -43,7 +43,7 @@
                  fxLayoutAlign="center center">
                 <i class="material-icons disconnect-icon">link_off</i>
                 <h5 class="text-center">Pipeline <i>{{pipeline.name}}</i> is not running, did you start the pipeline?</h5>
-                <button mat-button mat-raised-button color="primary" (click)="startPipeline()">
+                <button mat-button mat-raised-button color="accent" (click)="startPipeline()">
                     <span>Start pipeline</span>
                 </button>
             </div>
