--- a/ui/src/app/pipeline-details/components/monitoring/pipeline-monitoring.component.scss
+++ b/ui/src/app/pipeline-details/components/monitoring/pipeline-monitoring.component.scss
@@ -17,8 +17,8 @@
  */
 
 .add-options {
-  background-color:#f6f6f6;
-  border-bottom: 1px solid #cccccc;
+  background-color: var(--color-bg-1);
+  border-bottom: 1px solid var(--color-bg-3);
   padding-top:10px;
   padding-bottom:10px;
 }
