--- a/ui/src/scss/sp/buttons.scss
+++ b/ui/src/scss/sp/buttons.scss
@@ -56,7 +56,7 @@
 }
 
 .mat-raised-button.mat-primary:enabled {
-  background: $sp-color-primary;
+  background: var(--color-primary);
   color: rgba(255, 255, 255, 0.75);
 }
 
