--- a/ui/src/scss/sp/pipeline-element-loading.scss
+++ b/ui/src/scss/sp/pipeline-element-loading.scss
@@ -22,7 +22,7 @@
   top:0px;
   width:98%;
   height:98%;
-  background:white;
+  background: var(--color-pe);
   opacity:0.8;
   z-index:6;
   border-radius:50%;
