[STREAMPIPES-395] Harmonize colors in CSS module

--- a/ui/src/app/connect/components/data-marketplace/adapter-description/adapter-description.component.scss
+++ b/ui/src/app/connect/components/data-marketplace/adapter-description/adapter-description.component.scss
@@ -20,15 +20,23 @@
     height: 100%;
     box-shadow: 1px 1px 2px #555;
     border: 1px solid gray;
+    background: var(--color-bg-dialog);
+    cursor: pointer;
     padding: 10px;
+    opacity: 0.7;
 }
 .adapter-description-box {
     height: 100%;
     box-shadow: 1px 1px 2px #555;
     border: 1px solid gray;
+    background: var(--color-bg-dialog);
     cursor: pointer;
     padding: 10px;
     opacity: 0.7;
+}
+
+.adapter-box:hover {
+    opacity: 1;
 }
 
 .adapter-description-box:hover {
