--- a/ui/src/app/connect/components/format-configuration/format-configuration.component.html
+++ b/ui/src/app/connect/components/format-configuration/format-configuration.component.html
@@ -58,7 +58,7 @@
             data-cy="sp-format-selection-next-button"
             [disabled]="!formatConfigurationValid"
             (click)="clickNext()"
-            color="primary" mat-raised-button>
+            color="accent" mat-raised-button>
         Next
     </button>
 </div>
