--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -69,7 +69,7 @@
     <button class="stepper-button"
             id="event-schema-next-button"
             data-cy="sp-event-schema-next-button"
-            color="primary" mat-raised-button
+            color="accent" mat-raised-button
             (click)="clickNext()"
             [disabled]="!validEventSchema">
         Next
