--- a/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
@@ -27,13 +27,13 @@
             <ng-container matColumnDef="start">
                 <th mat-header-cell *matHeaderCellDef> Start</th>
                 <td mat-cell *matCellDef="let adapter">
-                    <button color="primary" mat-button mat-icon-button matTooltip="Start adapter"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Start adapter"
                             matTooltipPosition="above"
                             (click)="startAdapter(adapter)"
                             *ngIf="(connectService.isDataStreamDescription(adapter)) && !adapter.running">
                         <i class="material-icons">play_arrow</i>
                     </button>
-                    <button color="primary" mat-button mat-icon-button matTooltip="Stop adapter"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Stop adapter"
                             matTooltipPosition="above"
                             (click)="stopAdapter(adapter)"
                             *ngIf="(connectService.isDataStreamDescription(adapter)) && adapter.running">
@@ -97,13 +97,13 @@
 <!--                    </button>-->
 <!--                </span>-->
                 <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="primary" mat-button mat-icon-button matTooltip="Create adapter template"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Create adapter template"
                             matTooltipPosition="above" (click)="createTemplate(adapter)"><i
                             class="material-icons">content_copy</i>
                     </button>
                 </span>
                 <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="primary" mat-button mat-icon-button matTooltip="Delete adapter"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Delete adapter"
                             data-cy="delete" matTooltipPosition="above" (click)="deleteAdapter(adapter)">
                         <i class="material-icons">delete</i>
                     </button>
