--- a/ui/src/app/connect/components/generic-adapter-configuration/generic-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/generic-adapter-configuration/generic-adapter-configuration.component.html
@@ -35,7 +35,7 @@
     <button class="mat-basic" mat-raised-button (click)="removeSelection()">Cancel</button>
     <div id="generic-settings-next-button">
         <button class="stepper-button" [disabled]="!genericAdapterSettingsFormValid"
-                (click)="clickNext()" color="primary" mat-raised-button>Next
+                (click)="clickNext()" color="accent" mat-raised-button>Next
         </button>
     </div>
 </div>
