--- a/ui/src/app/connect/components/schema-editor/event-property-row/event-property-row.component.scss
+++ b/ui/src/app/connect/components/schema-editor/event-property-row/event-property-row.component.scss
@@ -18,11 +18,11 @@
 
 
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-    background-color: rgb(27, 20, 100) !important;
+    background-color: var(--color-accent) !important;
 }
 
 ::ng-deep .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
-    background-color: rgb(27, 20, 100) !important;
+    background-color: var(--color-accent) !important;
 }
 
 .checkbox-selected {
