--- a/ui/src/app/connect/components/schema-editor/loading-message/loading-message.component.html
+++ b/ui/src/app/connect/components/schema-editor/loading-message/loading-message.component.html
@@ -18,7 +18,7 @@
 
 <div fxLayout="column" >
     <div fxLayoutAlign="center">
-        <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0">Loading</mat-spinner>
+        <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0" color="accent">Loading</mat-spinner>
     </div>
     <div fxLayoutAlign="center">
         <h3>Guessing the event schema...</h3>
