--- a/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
+++ b/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
@@ -20,7 +20,7 @@
     <div class="sp-dialog-content p-15">
         <div fxLayout="column" *ngIf="!adapterInstalled">
             <div fxLayoutAlign="center" >
-                <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0" >Loading</mat-spinner>
+                <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0" color="accent">Loading</mat-spinner>
             </div>
             <div fxLayoutAlign="center">
                 <h3>Please wait while your new adapter is being generated...</h3>
