--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-data-type/edit-data-type.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-data-type/edit-data-type.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<mat-form-field class="doubleWidth" >
+<mat-form-field class="doubleWidth" color="accent">
     <mat-select placeholder="Runtime Type" [(ngModel)]="cachedProperty.runtimeType" (selectionChange)="valueChanged()">
         <mat-option *ngFor="let dataType of runtimeDataTypes" [value]="dataType.url">
             {{ dataType.label }}
