--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-unit-transformation/edit-unit-transformation.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-unit-transformation/edit-unit-transformation.component.html
@@ -18,7 +18,7 @@
 
 <div fxLayout="row" fxLayoutAlign="start" *ngIf="showUnitTransformation">
     <div class="form-group" fxFlexAlign="center" style="width: 155px">
-        <mat-form-field *ngIf="!hadMeasurementUnit" class="example-full-width" style="width: 155px">
+        <mat-form-field *ngIf="!hadMeasurementUnit" class="example-full-width" style="width: 155px" color="accent">
             <input matInput placeholder="Unit" [matAutocomplete]="auto" [formControl]="stateCtrl"
                    [attr.disabled]="transformUnitEnable ? '' : null">
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" [panelWidth]="'300px'">
@@ -27,17 +27,17 @@
                 </mat-option>
             </mat-autocomplete>
         </mat-form-field>
-        <mat-form-field *ngIf="hadMeasurementUnit" class="example-full-width" style="width: 155px">
+        <mat-form-field *ngIf="hadMeasurementUnit" class="example-full-width" style="width: 155px" color="accent">
             <input matInput placeholder="Unit" disabled [(ngModel)]="oldMeasurementUnitDipsplay">
         </mat-form-field>
 
     </div>
-    <button mat-button (click)="transformUnit()" color="primary" class="form-group" fxFlexAlign="center"
+    <button mat-button (click)="transformUnit()" color="accent" class="form-group" fxFlexAlign="center"
             style="min-width: 60px; max-width: 60px">
         <mat-icon *ngIf="!transformUnitEnable">arrow_forward</mat-icon>
         <mat-icon *ngIf="transformUnitEnable" style="transform: rotate(180deg)">arrow_forward</mat-icon>
     </button>
-    <mat-form-field class="example-full-width" style="width: 155px" *ngIf="transformUnitEnable">
+    <mat-form-field class="example-full-width" style="width: 155px" *ngIf="transformUnitEnable" color="accent">
         <mat-select placeholder="New Unit" [(ngModel)]="selectUnit" [formControl]="newUnitStateCtrl"[compareWith]="compareFn">
             <mat-option *ngFor="let unit of possibleUnitTransformations" [value]="unit"
                         (click)="changeTargetUnit(unit)">
