--- a/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
@@ -21,12 +21,12 @@
   <form #propertyForm="ngForm">
     <div fxLayout="row" fxLayoutAlign="start">
       <div class="form-group" fxFlexAlign="center">
-        <mat-form-field class="example-full-width" style="margin-right: 10px">
+        <mat-form-field class="example-full-width" style="margin-right: 10px" color="accent">
           <input matInput placeholder="Label" name="label" id="label" [(ngModel)]="cachedProperty.label">
         </mat-form-field>
       </div>
       <div attr.id="input-runtime-name-{{cachedProperty.label}}" class="form-group" fxFlexAlign="center">
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="example-full-width" color="accent">
           <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename"
             [(ngModel)]="cachedProperty.runtimeName">
         </mat-form-field>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-group">
-      <mat-form-field class="doubleWidth">
+      <mat-form-field class="doubleWidth" color="accent">
         <textarea matInput name="description" placeholder="Description" id="description"
           [(ngModel)]="cachedProperty.description" cols="20" rows="2"></textarea>
       </mat-form-field>
@@ -47,7 +47,7 @@
     </sp-edit-correction-value>
 
     <div class="form-group">
-      <mat-form-field class="doubleWidth">
+      <mat-form-field class="doubleWidth" color="accent">
         <input matInput placeholder="Semantic Type" class="dmainProperty" name="domainproperty" id="domainproperty"
                [(ngModel)]="cachedProperty.domainProperties[0]" [matAutocomplete]="st" [formControl]="domainPropertyControl">
       <mat-autocomplete #st="matAutocomplete" [panelWidth]="'300px'">
@@ -60,6 +60,7 @@
         <mat-checkbox name="timestampCheckbox"
                       (change)="editTimestampDomainProperty($event.checked)"
                       [checked]="isTimestampProperty"
+                      color="accent"
                       data-cy="sp-mark-as-timestamp">
           Mark as timestamp
         </mat-checkbox>
@@ -82,7 +83,7 @@
 
 <mat-dialog-actions>
   <button mat-button mat-raised-button class="mat-basic" mat-dialog-close>Close</button>
-  <button mat-button mat-raised-button color="primary"
+  <button mat-button mat-raised-button color="accent"
           [disabled]="isSaveBtnEnabled"
           (click)="save();
           isSaveBtnEnabled = false"
