--- a/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
+++ b/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
@@ -47,7 +47,7 @@
                            [ngModelOptions]="{standalone: true}">
                 </mat-form-field>
                 <div fxLayoutAlign="end center">
-                    <button mat-raised-button color="primary" type="submit" class="md-raised md-primary submit-button">Update
+                    <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button">Update
                     </button>
                 </div>
 
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div fxLayoutAlign="end center">
-                <button mat-raised-button color="primary" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
+                <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
                 </button>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>Protocols</h4>
-                <span flex></span>
+                <span fxFlex></span>
             </div>
         </div>
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div fxLayoutAlign="end center">
-                <button mat-raised-button color="primary" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
+                <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
                 </button>
             </div>
         </div>
