--- a/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.css
+++ b/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.css
@@ -27,25 +27,25 @@
 .data-format-list {
     width: 500px;
     max-width: 100%;
-    border: solid 1px #ccc;
+    border: solid 1px var(--color-bg-3);
     min-height: 60px;
     display: block;
-    background: white;
+    background: var(--color-bg-dialog);
     border-radius: 4px;
     overflow: hidden;
 }
 
 .data-format-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
+    border-bottom: solid 1px var(--color-bg-3);
+    color:var(--color-default-text);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    background: var(--color-bg-dialog);
     font-size: 14px;
 }
 
