--- a/ui/src/app/configuration/pipeline-element-configuration/pipeline-element-configuration.component.html
+++ b/ui/src/app/configuration/pipeline-element-configuration/pipeline-element-configuration.component.html
@@ -39,8 +39,7 @@
             </ng-container>
 
             <ng-container matColumnDef="name">
-                <th fxFlex="40" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Pipeline Element
-                    Container
+                <th fxFlex="40" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Extensions Service Group
                 </th>
                 <td fxFlex="40" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                     {{element.name}}
